<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<TextView android:text="@string/collection_shortdescription"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textStyle="bold" />
	<EditText android:id="@+id/collection_name"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />
	<TextView android:text="@string/collection_category"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textStyle="bold" />
	<Spinner android:layout_width="fill_parent" android:id="@+id/collection_category"
		android:drawSelectorOnTop="true" android:layout_height="wrap_content"
		android:prompt="@string/category_prompt" />
	<TextView android:text="@string/collection_longdescription"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textStyle="bold" />
	<EditText android:id="@+id/collection_longDescription"
		android:inputType="textMultiLine" android:layout_width="fill_parent"
		android:layout_height="0dip" android:layout_weight="1" />
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@+id/ok" android:text="@string/ok"
			android:layout_weight=".5" android:layout_height="wrap_content"
			android:layout_width="0dip" />
		<Button android:id="@+id/cancel" android:text="@string/cancel"
			android:layout_width="0dip" android:layout_weight=".5"
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>
